contact us done

--- a/contact-us.html
+++ b/contact-us.html
@@ -180,6 +180,7 @@
                                     <h1 class="mb-5 mt-0 pb-5 pt-0" data-aos="fade-right" data-aos-delay="200">
                                         Contact Us
                                     </h1>
+                                    <div class="py-5 my-5"></div>
 
                                     <!-- brief text -->
                                     <!-- <p data-aos="fade-right" data-aos-delay="600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit assumenda fuga quisquam earum magni unde!
@@ -220,31 +221,69 @@
                 </div>                
             </div>
 
-            <div class="" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
-                <div class="container contact-form single-widget subscribe-widget bg-light mt-5">
-                    <h3 class="text-center text-info py-3" >Leave Us A Messeage</h3>
-                    <form class="row" netlify >
-                        <div class="input-group col-md-6 my-1">
-                            <input class="field form-control" name="name" type="text" placeholder="Your Name">
-                        </div>
-                        <div class="input-group col-md-6 my-1">
-                            <input class="field form-control" name="email" type="email" placeholder="Email Address">
-                        </div>
-                        <div class="input-group col-md-6 my-1">
-                            <input class="field form-control" name="phone" type="tell" placeholder="Your Phone">
-                        </div>
-                        <div class="input-group col-md-6 my-1">
-                            <input class="field form-control" name="Subject" type="text" placeholder="Subject">
-                        </div>
+            <div class="container pt-5 mt-3 data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
+                <div class="row">
+                    <div class="col-4 single-widget w-100 px-auto contact-widget text-grey bg-white text-secondary" >
+                        <h5 class="text-secondary text-center">Contact Us</h5>
+                        <ul class="list-group bg-white pb-0" >
 
-                        <div class="input-group col-md-12 my-1 ">
-                            <textarea class="textarea field form-control px-2" name="Messeage" placeholder="Messeage"></textarea>
-                        </div>
+                            <!-- email -->
+                            <li class="list-group-item pl-0 pb-0 pt-5 text-secondary">
+                                <i class="fa fa-envelope-o mr-2 text-primary"></i>
+                                <a href="mailto:info@qualitydesigns.africa" target="_blank" class="text-secondary">info@qualitydesigns.africa</a>
+                            </li>
 
-                        <div class="container text-center my-3">
-                            <button type="submit" name="submit" class="btn btn-primary btn-lg w-50">Submit</button>
-                        </span>
-                    </form>
+                            <!-- fax -->
+                            <li class="list-group-item pl-0 pb-0 text-secondary">
+                                <i class="fa fa-fax mr-2 text-primary"></i>
+                                <a class="text-secondary" href="fax:+27862080595" target="_blank">(+27) 86 208 0595</a>
+                            </li>
+
+                            <!-- physical address -->
+                            <li class="list-group-item pb-0 pl-2 d-flex text-secondary">
+                                <i class="fa fa-map-marker mr-2 text-primary"></i>
+                                <p class="m-0">24 David McLean Drive <br> Westville 3629 <br> Durban, South Africa</p>
+                            </li>
+
+                            <!-- social Icons -->
+                            <div class="single-widget subscribe-widget d-flex justify-content-around " data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">    
+                                <ul class="nav social-nav pb-0 my-3">
+                                    <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook "></i></a></li>
+                                    <li><a href="#" target="_blank"><i class="fa fa-google-plus "></i></a></li>
+                                    <li><a href="#" target="_blank"><i class="fa fa-twitter "></i></a></li>
+                                    <li><a href="#" target="_blank"><i class="fa fa-google-plus "></i></a></li>
+                                    <li><a href="#" target="_blank"><i class="fa fa-linkedin "></i></a></li>
+                                </ul>
+                            </div>
+                            
+                        </ul>
+                    </div>
+               
+                    <div class="col-8 contact-form single-widget subscribe-widget bg-white ">
+                        <h3 class="text-center text-info py-4" >Leave Us A Messeage</h3>
+                        <form class="row pt-2" netlify >
+                            <div class="input-group col-md-6 my-1">
+                                <input class="field form-control" name="name" type="text" placeholder="Your Name">
+                            </div>
+                            <div class="input-group col-md-6 my-1">
+                                <input class="field form-control" name="email" type="email" placeholder="Email Address">
+                            </div>
+                            <div class="input-group col-md-6 my-1">
+                                <input class="field form-control" name="phone" type="tell" placeholder="Your Phone">
+                            </div>
+                            <div class="input-group col-md-6 my-1">
+                                <input class="field form-control" name="Subject" type="text" placeholder="Subject">
+                            </div>
+
+                            <div class="input-group col-md-12 my-1 ">
+                                <textarea class="textarea field form-control px-2" name="Messeage" placeholder="Messeage"></textarea>
+                            </div>
+
+                            <div class="container text-center my-3">
+                                <button type="submit" name="submit" class="btn btn-primary btn-lg w-50">Submit</button>
+                            </span>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -258,7 +297,7 @@
     <!-- scroll to top end -->
 
     <!-- Footer Start -->
-    <footer>
+    <footer class="d-none"> 
         <!-- Widgets Start -->
         <div class="footer-widgets py-4">
             <div class="container">
@@ -327,7 +366,7 @@
                                     <a class="text-white" href="fax:+27862080595" target="_blank">(+27) 86 208 0595</a>
                                 </li>
 
-                                </ul>
+                            </ul>
                         </div>
                     </div>
 
