--- a/vecancies.html
+++ b/vecancies.html
@@ -209,25 +209,26 @@
     <!-- Hero End -->
 
     <!-- Call To Action Start -->
-    <section class="cta " data-aos="fade-up" data-aos-delay="0">
-        <div class="container mt-1 pt-3">
-            <div class="cta-content pb-5 d-xl-flex align-items-center justify-content-around text-center text-xl-left">
+    <section class="cta " data-aos="fade-right" data-aos-delay="0">
+        <div class="container-fluid px-0 mt-0 pt-0">
+            <div class="cta-content py-0 mx-0 d-xl-flex align-items-center justify-content-around text-center text-xl-left">
                 <div class="content" data-aos="fade-right" data-aos-delay="200">
-                    <h2>Vecancies</h2>
+                    <h2>No Vecancies Available Currently</h2>
+                    <!-- <h2>Vecancies</h2>
                     <p>Please Email your CV and Applicable Documents To The Email On The Post And CC</p>
                     <div class="media">
                         <div class="media-body ml-3">
                             <h6>Humman Resources</h6>
                             <a href="mailto:hr@companydomain.com" class="text-light">hr@companydomain.com</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </section>
     <!-- Call To Action End -->
 
-    <div class="vecancies container-fluid bg-primary p-3">
+    <div class="vecancies container-fluid bg-primary p-3 d-none">
         <div id="accordion" role="tablist" class="p-2 mb-2 bg-primary rounded">
             <!-- Customer Relationship Manager -->
             <div class="card bg-light text-dark my-2 rounded ">
