--- a/contact-us.html
+++ b/contact-us.html
@@ -41,9 +41,9 @@
 
                 <!-- right -->
                 <div class="contact">
-                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 31 266 1790</a>
-                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.africa</a>
-                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users"></i> Careers</a>
+                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>(+27) 31 266 1790</a>
+                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.co.za</a>
+                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users text-white"></i> Careers</a>
                 </div>
                 </div>
 
@@ -230,7 +230,7 @@
                             <!-- email -->
                             <li class="list-group-item pl-0 pb-0 pt-5 text-secondary">
                                 <i class="fa fa-envelope-o mr-2 text-primary"></i>
-                                <a href="mailto:info@qualitydesigns.africa" target="_blank" class="text-secondary">info@qualitydesigns.africa</a>
+                                <a href="mailto:info@qualitydesigns.co.za" target="_blank" class="text-secondary">info@qualitydesigns.co.za</a>
                             </li>
 
                             <!-- fax -->
@@ -291,8 +291,8 @@
     <!-- Trust End -->
 
     <!-- scroll to top start -->
-    <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left">
-        <i class=" fa fa-4x fas fa-chevron-circle-up text-primary"></i>
+    <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button"  data-toggle="tooltip" data-placement="left">
+        <i class=" fa fa-2x fas fa-chevron-circle-up text-primary"></i>
     </a>
     <!-- scroll to top end -->
 
@@ -357,7 +357,7 @@
                                 <!-- email -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-envelope-o mr-2"></i>
-                                    <a href="mailto:info@qualitydesigns.africa" target="_blank" class="text-white">info@qualitydesigns.africa</a>
+                                    <a href="mailto:info@qualitydesigns.co.za" target="_blank" class="text-white">info@qualitydesigns.co.za</a>
                                 </li>
 
                                 <!-- fax -->
