--- a/industries.html
+++ b/industries.html
@@ -41,9 +41,9 @@
 
                 <!-- right -->
                 <div class="contact">
-                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 31 266 1790</a>
-                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.africa</a>
-                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users"></i> Careers</a>
+                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>(+27) 31 266 1790</a>
+                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.africa</a>
+                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users text-white"></i> Careers</a>
                 </div>
                 </div>
 
@@ -318,8 +318,8 @@
     <!-- Industry Services End -->
     
     <!-- scroll to top start -->
-    <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left">
-        <i class=" fa fa-4x fas fa-chevron-circle-up text-primary"></i>
+    <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button"  data-toggle="tooltip" data-placement="left">
+        <i class=" fa fa-2x fas fa-chevron-circle-up text-primary"></i>
     </a>
     <!-- scroll to top end -->
 
