--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
     <!-- Testimonial and Clients End -->
 
     <!-- scroll to top start -->
-    <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left">
+    <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button" data-toggle="tooltip" data-placement="left">
         <i class=" fa fa-2x fas fa-chevron-circle-up text-primary"></i>
     </a>
     <!-- scroll to top end -->
