--- a/contact-us.html
+++ b/contact-us.html
@@ -259,6 +259,7 @@
                         </ul>
                     </div>
                
+                    <!-- contact form -->
                     <div class="col-8 contact-form single-widget subscribe-widget bg-white ">
                         <h3 class="text-center text-info py-4" >Leave Us A Messeage</h3>
                         <form class="row pt-2" netlify >
