--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero">
+    <section class="hero home-hero">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
@@ -244,10 +244,11 @@
     <section class="featured p-0 bg-grey " id="about">
         <div class="container my-0 text-center">
             <div class="row py-5">
-                <div class="my-auto col-lg-12 col-md-12"  data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-                    <div class="title">
+                <!-- <div class="my-auto col-lg-12 col-md-12"  data-aos="fade-right" data-aos-delay="400" data-aos-duration="800"> -->
+                <div class="my-auto col-lg-12 col-md-12" >
+                    <div class="title dark-grey">
                         <!-- <h6 class="title-primary">about Quality Designs</h6> -->
-                        <h3 class="title-blue"> <span class="light-sans ">about</span>  Quality Designs</h3>
+                        <h3 class="title-blue dark-grey"> <span class="light-sans dark-grey">about</span>  Quality Designs</h3>
                     </div>
 
                     <!-- about text -->
@@ -283,7 +284,7 @@
             <!-- services header -->
             <div class="title text-center" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
                 <!-- <h6>Our Speakers</h6> -->
-                <h3 class="title-blue"><a href="./products-services.html">Solutions & Services</a></h3>
+                <h3 class="title-blue "><a class="dark-grey" href="./products-services.html">Solutions & Services</a></h3>
             </div>
             <!-- services body -->
             <div class="container">
@@ -400,12 +401,12 @@
                 <!-- clients header -->
                 <div class="title text-center">
                     <!-- <h6>Our Speakers</h6> -->
-                    <h3 class="title-blue"> <span class="light-sans">Our</span>  Partners</h3>
+                    <h3 class="title text-white"> <span class="light-sans text-white">Our</span>  Partners</h3>
                     <!-- <h3 class="title-orange"> <span class="light-sans title-orange">Our</span>  Partners</h3> -->
                 </div>
 
                 <!-- clients  -->
-                <div class="swiper-container clients-slider pt-2" id="clients-slider">
+                <!-- <div class="swiper-container clients-slider pt-2" id="clients-slider">
                     <div id="swiper-slides" class="swiper-wrapper">
 
                         <div class="swiper-slide">
@@ -438,6 +439,45 @@
                         <div class="swiper-slide">
                             <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/10.png" alt="Client 5"></a>
                         </div>
+                    </div>
+                    <div class="test-pagination"></div>
+                </div> -->
+
+                <div class="swiper-container clients-slider pt-2" id="clients-slider">
+                    <div id="swiper-slides" class="swiper-wrapper">
+
+                        <div class="swiper-slide">
+                            <a clas="partner-link" href="#"><img id="partner-img" height="69" src="assets/images/Clients/b.png" alt="Client 1"></a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a clas="partner-link" href="#"><img id="partner-img" height="69" src="assets/images/Clients/a.png" alt="Client 1"></a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a clas="partner-link" href="#"><img id="partner-img" height="69" src="assets/images/Clients/c.png" alt="Client 1"></a>
+                        </div>
+<!-- 
+                        <div class="swiper-slide">
+                            <a clas="partner-link" href="#"><img id="partner-img" height="69" src="assets/images/Clients/d.png" alt="Client 1"></a>
+                        </div> -->
+
+                        <div class="swiper-slide">
+                            <a clas="partner-link" href="#"><img id="partner-img" height="69" src="assets/images/Clients/e.png" alt="Client 1"></a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a clas="partner-link" href="#"><img id="partner-img" height="69" src="assets/images/Clients/f.png" alt="Client 1"></a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a clas="partner-link" href="#"><img id="partner-img" height="69" src="assets/images/Clients/g.png" alt="Client 1"></a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a clas="partner-link" href="#"><img id="partner-img" height="69" src="assets/images/Clients/h.png" alt="Client 1"></a>
+                        </div>
+
                     </div>
                     <div class="test-pagination"></div>
                 </div>
@@ -529,23 +569,23 @@
 
                     <!-- contact details 2 -->
                     <div class="col-lg-3">
-                        <div class="single-widget contact-widget text-white">
-                            <h5>Contact Us</h5>
+                        <div class="single-widget contact-widget text-white pt-1">
+                            <h5 class="my-4"></h5>
                             <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-phone mr-2"></i>
-                                    <a class="text-white" href="tel:+27312661790" target="_blank">(+27) 31 266 1790</a>
+                                    <a class="text-white" href="tel:+27312661790" target="_blank">+27 31 266 1790</a>
                                 </li>
                                                                     
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-mobile mr-2"></i>
-                                    <a class="text-white" href="tel:+27722806395" target="_blank">(+27) 72 280 6395</a>
+                                    <a class="text-white" href="tel:+27722806395" target="_blank">+27 72 280 6395</a>
                                 </li>
 
                                 <!-- fax -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-fax mr-2"></i>
-                                    <a class="text-white" href="fax:+27862080595" target="_blank">(+27) 86 208 0595</a>
+                                    <a class="text-white" href="fax:+27862080595" target="_blank">+27 86 208 0595</a>
                                 </li>
                                 <!-- <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-whatsapp mr-2"></i>
