--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <!-- right -->
                 <div class="contact">
-                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>(+27) 31 266 1790</a>
+                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>+27 31 266 1790</a>
                     <a href="mailto:Support@companydomain.co.za" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.co.za</a>
                     <a href="vecancies.html" class="mr-3"> <i class="fa fa-users text-white"></i> Careers</a>
                 </div>
