contact us redone

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         workplace productivity, and customer experience through the effective use and adoption
                         of technology.
                     </p>
-                    <a href="about.html" class="btn btn-primary mt-0">Read More</a>
+                    <a href="about.html" class="btn btn-primary px-3 py-0 mt-0">Read More</a>
 
                     <div>
                         <i></i>
@@ -397,7 +397,8 @@
         <div class="container">
 
             <!-- clients start -->
-            <div class="clients py-2" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
+            <!-- <div class="clients py-2" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600"> -->
+            <div class="clients py-2">
                 <!-- clients header -->
                 <div class="title text-center">
                     <!-- <h6>Our Speakers</h6> -->
@@ -572,13 +573,15 @@
                         <div class="single-widget contact-widget text-white pt-1">
                             <h5 class="my-4"></h5>
                             <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
+                                <!-- tell -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-phone mr-2"></i>
                                     <a class="text-white" href="tel:+27312661790" target="_blank">+27 31 266 1790</a>
                                 </li>
-                                                                    
+                                
+                                <!-- phone -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
-                                    <i class="fa fa-mobile mr-2"></i>
+                                    <i class="fa fa-mobile mr-3 ml-1"></i>
                                     <a class="text-white" href="tel:+27722806395" target="_blank">+27 72 280 6395</a>
                                 </li>
 
