--- a/products-services.html
+++ b/products-services.html
@@ -866,10 +866,10 @@
                                 </li>
 
                                 <!-- fax -->
-                                <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
+                                <!-- <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-fax mr-2"></i>
                                     <a class="text-white" href="fax:+27862080595" target="_blank">(+27) 86 208 0595</a>
-                                </li>
+                                </li> -->
 
                                 </ul>
                         </div>
@@ -880,11 +880,13 @@
                         <div class="single-widget contact-widget text-white pt-1">
                             <h5 class="my-4"></h5>
                             <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
+                                <!-- tell -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-phone mr-2"></i>
                                     <a class="text-white" href="tel:+27312661790" target="_blank">+27 31 266 1790</a>
                                 </li>
-                                                                    
+                                         
+                                <!-- mobile -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-mobile mr-2"></i>
                                     <a class="text-white" href="tel:+27722806395" target="_blank">+27 72 280 6395</a>
@@ -892,7 +894,7 @@
 
                                 <!-- fax -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
-                                    <i class="fa fa-fax mr-2"></i>
+                                    <i class="fa fa-fax mr-3 ml-1"></i>
                                     <a class="text-white" href="fax:+27862080595" target="_blank">+27 86 208 0595</a>
                                 </li>
                                 <!-- <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
