--- a/contact-us.html
+++ b/contact-us.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">
 </head>
 
-<body class="">
+<body class="bg-blue">
     <!-- Loader Start -->
     <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
@@ -41,7 +41,7 @@
 
                 <!-- right -->
                 <div class="contact">
-                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>(+27) 31 266 1790</a>
+                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>+27 31 266 1790</a>
                     <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.co.za</a>
                     <a href="vecancies.html" class="mr-3"> <i class="fa fa-users text-white"></i> Careers</a>
                 </div>
@@ -210,7 +210,7 @@
     <!-- Hero End -->
 
     <!-- map start -->
-    <div class="map pt-1  bg-primary">
+    <div class="map pt-1  bg-blue">
         <!-- map -->
         <div class="googlemaps-area w-100 h-100">
             <!-- <iframe class="w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3468.423629430679!2d30.39612821468372!3d-29.62043701864389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef6bc52e27f3137%3A0x6dd6d60dba158838!2s11%20Ridge%20Rd%2C%20Scottsville%2C%20Pietermaritzburg%2C%203201!5e0!3m2!1sen!2sza!4v1578755195464!5m2!1sen!2sza" width="600" height="900" frameborder="0" style="border:0;" allowfullscreen=""></iframe> -->
@@ -225,33 +225,33 @@
         <!-- <div class="container"> -->
             
 
-            <div class="container pt-1 mt-3 pb-5 mb-5 bg-white" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
-                <div class="row px-4 bg-white">
+            <div class="container pt-1 mt-3 pb-5 mb-5 bg-blue" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
+                <div class="row px-4 bg-blue">
                     <!-- contact us -->
-                    <div class="col-4 single-widget w-100 contact-widget text-grey bg-white px-3 text-secondary " >
-                        <h3 class="text-secondary text-center pt-2">Contact Details</h3>
-                        <ul class="list-group bg-grey pb-0 pl-5" >
+                    <div class="col-4 single-widget w-100 contact-widget text-grey bg-blue px-3" >
+                        <h3 class="text-white text-start pt-2"> <span class="light-sans text-white">Contact</span> Details</h3>
+                        <ul class="list-group bg-primary py-3 pl-5" >
 
                             <!-- email -->
-                            <li class="list-group-item pl-0 pb-0 pt-5 text-secondary bg-grey">
-                                <i class="fa fa-envelope-o mr-2 text-primary"></i>
-                                <a href="mailto:info@qualitydesigns.co.za" target="_blank" class="text-secondary">info@qualitydesigns.co.za</a>
+                            <li class="list-group-item pl-0 pb-2 pt-3 text-white bg-primary">
+                                <i class="fa fa-envelope-o mr-2 text-white"></i>
+                                <a href="mailto:info@qualitydesigns.co.za" target="_blank" class="text-white" >info@qualitydesigns.co.za</a>
                             </li>
 
                             <!-- fax -->
-                            <li class="list-group-item pl-0 pb-0 text-secondary bg-grey">
-                                <i class="fa fa-fax mr-2 text-primary"></i>
-                                <a class="text-secondary" href="fax:+27862080595" target="_blank">(+27) 86 208 0595</a>
+                            <li class="list-group-item pl-0 pb-2 text-white bg-primary">
+                                <i class="fa fa-fax mr-2 text-white"></i>
+                                <a class="text-white"  href="fax:+27862080595" target="_blank">+27 86 208 0595</a>
                             </li>
 
                             <!-- physical address -->
-                            <li class="list-group-item pb-0 pl-2 d-flex text-secondary bg-grey">
-                                <i class="fa fa-map-marker mr-2 text-primary"></i>
+                            <li class="list-group-item pb-0 pl-2 d-flex text-white bg-primary">
+                                <i class="fa fa-map-marker mr-2 text-white"></i>
                                 <p class="m-0">24 David McLean Drive <br> Westville 3629 <br> Durban, South Africa</p>
                             </li>
 
                             <!-- social Icons -->
-                            <div class="single-widget subscribe-widget d-flex justify-content-around bg-grey pt-4" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">    
+                            <div class="single-widget subscribe-widget d-flex justify-content-start bg-primary pt-2" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">    
                                 <ul class="nav social-nav pb-0 my-3">
                                     <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook "></i></a></li>
                                     <li><a href="#" target="_blank"><i class="fa fa-google-plus "></i></a></li>
@@ -265,9 +265,9 @@
                     </div>
                
                     <!-- contact form -->
-                    <div class="col-8 contact-form single-widget subscribe-widget px-auto bg-white">
-                        <h3 class="text-center bg-white w-100 pt-2 text-secondary" >Leave Us A Messeage</h3>
-                        <form class="row pt-2 bg-grey" netlify >
+                    <div class="col-8 contact-form single-widget subscribe-widget px-auto bg-blue">
+                        <h3 class="text-start bg-blue w-100 pt-2 text-white" ><span class="light-sans text-white">Leave Us A</span>  Messeage</h3>
+                        <form class="row pt-2 ml-1 bg-grey" netlify >
                             <div class="input-group col-md-6 my-1">
                                 <input class="field form-control" name="name" type="text" placeholder="Your Name">
                             </div>
@@ -286,7 +286,7 @@
                             </div>
 
                             <div class="container text-center my-3">
-                                <button type="submit" name="submit" class="btn btn-primary bg-primary btn-lg">Submit</button>
+                                <button type="submit" name="submit" class="btn btn-primary bg-primary py-2">Submit</button>
                             </span>
                         </form>
                     </div>
@@ -297,9 +297,9 @@
     <!-- Trust End -->
 
     <!-- scroll to top start -->
-    <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button"  data-toggle="tooltip" data-placement="left">
-        <i class=" fa fa-2x fas fa-chevron-circle-up text-primary"></i>
-    </a>
+    <!-- <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button"  data-toggle="tooltip" data-placement="left">
+        <i class=" fa fa-2x fas fa-chevron-circle-up text-white"></i>
+    </a> -->
     <!-- scroll to top end -->
 
     <!-- Footer Start -->
