--- a/vecancies.html
+++ b/vecancies.html
@@ -615,10 +615,10 @@
                                 </li>
 
                                 <!-- fax -->
-                                <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
+                                <!-- <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-fax mr-2"></i>
                                     <a class="text-white" href="fax:+27862080595" target="_blank">(+27) 86 208 0595</a>
-                                </li>
+                                </li> -->
 
                                 </ul>
                         </div>
@@ -635,7 +635,7 @@
                                 </li>
                                                                     
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
-                                    <i class="fa fa-mobile mr-2"></i>
+                                    <i class="fa fa-mobile mr-3 ml-1"></i>
                                     <a class="text-white" href="tel:+27722806395" target="_blank">+27 72 280 6395</a>
                                 </li>
 
