contact details light orage

--- a/contact-us.html
+++ b/contact-us.html
@@ -230,28 +230,28 @@
                     <!-- contact us -->
                     <div class="col-4 single-widget w-100 contact-widget text-grey bg-blue px-3" >
                         <h3 class="text-white text-start pt-2"> <span class="light-sans text-white">Contact</span> Details</h3>
-                        <ul class="list-group bg-primary py-3 pl-5" >
+                        <ul class="list-group bg-l-orange py-3 pl-5" >
 
                             <!-- email -->
-                            <li class="list-group-item pl-0 pb-2 pt-3 text-white bg-primary">
+                            <li class="list-group-item pl-0 pb-2 pt-3 text-white bg-l-orange">
                                 <i class="fa fa-envelope-o mr-2 text-white"></i>
                                 <a href="mailto:info@qualitydesigns.co.za" target="_blank" class="text-white" >info@qualitydesigns.co.za</a>
                             </li>
 
                             <!-- fax -->
-                            <li class="list-group-item pl-0 pb-2 text-white bg-primary">
+                            <li class="list-group-item pl-0 pb-2 text-white bg-l-orange">
                                 <i class="fa fa-fax mr-2 text-white"></i>
                                 <a class="text-white"  href="fax:+27862080595" target="_blank">+27 86 208 0595</a>
                             </li>
 
                             <!-- physical address -->
-                            <li class="list-group-item pb-0 pl-2 d-flex text-white bg-primary">
+                            <li class="list-group-item pb-0 pl-2 d-flex text-white bg-l-orange">
                                 <i class="fa fa-map-marker mr-2 text-white"></i>
                                 <p class="m-0">24 David McLean Drive <br> Westville 3629 <br> Durban, South Africa</p>
                             </li>
 
                             <!-- social Icons -->
-                            <div class="single-widget subscribe-widget d-flex justify-content-start bg-primary pt-2" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">    
+                            <div class="single-widget subscribe-widget d-flex justify-content-start bg-l-orange pt-2" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">    
                                 <ul class="nav social-nav pb-0 my-3">
                                     <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook "></i></a></li>
                                     <li><a href="#" target="_blank"><i class="fa fa-google-plus "></i></a></li>
@@ -266,7 +266,7 @@
                
                     <!-- contact form -->
                     <div class="col-8 contact-form single-widget subscribe-widget px-auto bg-blue">
-                        <h3 class="text-start bg-blue w-100 pt-2 text-white" ><span class="light-sans text-white">Leave Us A</span>  Messeage</h3>
+                        <h3 class="text-start bg-blue w-100 pt-2 text-white" ><span class="light-sans text-white">Leave Us A</span>  Message</h3>
                         <form class="row pt-2 ml-1 bg-grey" netlify >
                             <div class="input-group col-md-6 my-1">
                                 <input class="field form-control" name="name" type="text" placeholder="Your Name">
