hid services trusts

--- a/products/index.html
+++ b/products/index.html
@@ -376,7 +376,7 @@
     <!-- Services End -->
 
     <!-- Consulting Trust Start -->
-    <section id="consulting" class="trust pt-0 pb-0 mt-0 bg-white" style="border-top: solid 0.5rem #F0640C ; ">
+    <section id="consulting" class="trust pt-0 pb-0 mt-0 bg-white hide" style="border-top: solid 0.5rem #F0640C ; ">
         <div class="service-spacer"></div>
         <div class="container" >
             <div class="row">
@@ -499,7 +499,7 @@
     <!-- Consulting Trust End -->
 
     <!-- Digital Solutions Trust Start -->
-    <section id="digital-solutions" class="trust pt-5 mt-0 pb-0 bg-white border">
+    <section id="digital-solutions" class="trust pt-5 mt-0 pb-0 bg-white border hide">
         <div class="container">
             <div class="row">
                 <div  class="col-xl-12" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
@@ -697,7 +697,7 @@
     <!-- Digital Solutions Consulting Trust End -->
 
     <!-- cloud-services Trust Start -->
-    <section id="cloud-services" class="trust py-0 my-0 bg-white border">
+    <section id="cloud-services" class="trust py-0 my-0 bg-white border hide">
         <div class="service-spacer"></div>
         <div class="container">
             <div class="row">
@@ -775,7 +775,7 @@
     <!-- cloud-services Trust End -->
 
     <!-- devices Trust Start -->
-    <section id="devices" class="trust mt-4 pb-0 pt-0 mt-0 bg-white">
+    <section id="devices" class="trust mt-4 pb-0 pt-0 mt-0 bg-white hide">
         <div class="service-spacer"></div>
         <div class="container">
             <div class="row">
