updated services links

--- a/products/index.html
+++ b/products/index.html
@@ -242,7 +242,7 @@
                             <!-- <img class="mr-4" src="../assets/images/service2.png" alt="Web Development"> -->
                             <div class="media-body">
                                 <!-- service group title -->
-                                <a href="./products-services.html#consulting"><h5>Consulting</h5></a>
+                                <a href="./consulting.html"><h5>Consulting</h5></a>
                                                                 
 
                                 <!-- service group description -->
@@ -251,9 +251,9 @@
                                 <!-- services list -->
                                 <div class="" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/strategy and oprations.png" alt="Web Development"> <a class="text-secondary" href="#strategy-and-operations">Strategy and Operations</a> </li>
-                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/technology services.png" alt="Web Development"> <a class="text-secondary" href="#technology-consulting">Technology Consulting</a> </li>
-                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/project management services.png" alt="Web Development"> <a class="text-secondary" href="#project-management-services">Project Management Services</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/strategy and oprations.png" alt="Web Development"> <a class="text-secondary" href="./consulting.html#strategy-and-operations">Strategy and Operations</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/technology services.png" alt="Web Development"> <a class="text-secondary" href="./consulting.html#technology-consulting">Technology Consulting</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/project management services.png" alt="Web Development"> <a class="text-secondary" href="./consulting.html#project-management-services">Project Management Services</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -278,25 +278,25 @@
                         <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <!-- <img class="mr-4" src="../assets/images/service2.png" alt="Web Development"> -->
                             <div class="media-body">
-                                <a href="./products-services.html#digital-solutions"><h5>Digital Solutions</h5></a>
+                                <a href="./digital.html"><h5>Digital Solutions</h5></a>
                                 <p class=""> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque dicta aliquid accusamus error nostrum facilis, quae distinctio. Ea, nam quod!</p>
                                 <div class="" style="border-bottom: 0px;">
                                     <ul class="list-group list-group-flush " style="flex-direction: row1;">
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="" src="../assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="#customer-relationship-management">Customer Relationship Management</a> </li>
-                                            <li class="list-group-item col-lg-6" style="border-top: 0px;"><img width="49" height="49" class="mr-2" src="../assets/images/services icons/custom app dev.png" alt="Custom Application Development"> <a class="text-secondary" href="#custom-application-development">Custom Application Development</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="" src="../assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="./digital.html#customer-relationship-management">Customer Relationship Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="border-top: 0px;"><img width="49" height="49" class="mr-2" src="../assets/images/services icons/custom app dev.png" alt="Custom Application Development"> <a class="text-secondary" href="./digital.html#custom-application-development">Custom Application Development</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="#electronic-content-management">Electronic Content Management</a> </li>
-                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="#project-portfolio-management">Project Portfolio Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="./digital.html#electronic-content-management">Electronic Content Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="./digital.html#project-portfolio-management">Project Portfolio Management</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="#eprocurement">eProcurement</a> </li>
-                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="#enterprise-resource-planning">Enterprise Resource Planning</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="./digital.html#eprocurement">eProcurement</a> </li>
+                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="./digital.html#enterprise-resource-planning">Enterprise Resource Planning</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/real estate.png" alt="Real Estate Management System"> <a class="text-secondary" href="#real-estate-management-system"> Real Estate Management System</a></li>
-                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/web & mobile.png" alt="Web and Mobile Apllications"> <a class="text-secondary" href="#web-and-mobile-applications">Web and Mobile Apllications</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/real estate.png" alt="Real Estate Management System"> <a class="text-secondary" href="./digital.html#real-estate-management-system"> Real Estate Management System</a></li>
+                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="../assets/images/services icons/web & mobile.png" alt="Web and Mobile Apllications"> <a class="text-secondary" href="./digital.html#web-and-mobile-applications">Web and Mobile Apllications</a> </li>
                                         </div>
                                     </ul>
                                 </div>
@@ -323,7 +323,7 @@
                             <!-- <img class="mr-4" src="../assets/images/service1.png" alt="Web Development"> -->
                             <div class="media-body">
                                 <!-- service group title -->
-                                <h5>Cloud Services</h5>
+                                <h5><a href="./cloud_services.html"> Cloud Services</a></h5>
 
                                 <!-- service group description -->
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
@@ -331,8 +331,8 @@
                                 <!-- services list -->
                                 <div class="">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/infrastructure as a service.png" alt="Web Development"> <a class="text-secondary" href="#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
-                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/software as a service.png" alt="Web Development"> <a class="text-secondary" href="#software-as-a-service">Software As A Service</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/infrastructure as a service.png" alt="Web Development"> <a class="text-secondary" href="./cloud_services.html#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons/software as a service.png" alt="Web Development"> <a class="text-secondary" href="./cloud_services.html#software-as-a-service">Software As A Service</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -357,11 +357,11 @@
                         <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <!-- <img class="mr-4" src="../assets/images/service2.png" alt="Web Development"> -->
                             <div class="media-body">
-                                <h5>Devices</h5>
+                                <h5> <a href="./devices.html">Devices</a> </h5>
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
                                 <div class="">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons//push to talk.png" alt="Web Development"> <a class="text-secondary" href="#push-to-talk">Push To Talk</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="../assets/images/services icons//push to talk.png" alt="Web Development"> <a class="text-secondary" href="./devices.html#push-to-talk">Push To Talk</a> </li>
                                     </ul>
                                 </div>
                             </div>
